# vayudrishti

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .humanize-allow  CHANGELOG.md  README.md  idea.md
pipeline/: README.md  pyproject.toml
pipeline/scripts/: make_fixtures.py
pipeline/src/vayu/: __init__.py  aqi.py  cityconfig.py  cli.py  constants.py  geo.py  grid.py  lineage.py  logging_setup.py  settings.py  timeutils.py  upwind.py
pipeline/src/vayu/agents/: __init__.py  audit.py  contracts.py  digest.py  nim.py  orchestrator.py  resolver.py  roles.py  smoke.py  tools.py
pipeline/src/vayu/commands/: __init__.py  briefs.py  features.py  gate.py  ingest.py  publish.py  train.py
pipeline/src/vayu/features/: __init__.py  build.py  grid_features.py
pipeline/src/vayu/ingest/: __init__.py  datagov_live.py  firms.py  gee_extractor.py  openaq_archive.py  openaq_discover.py  openaq_live.py  openmeteo.py  osm_static.py  runner.py  wards.py
pipeline/src/vayu/models/: __init__.py  attribution.py  baseline_idw.py  deweather.py  features.py  forecast.py  gemm.py  interventions.py  metrics.py  nowcast.py  run.py
pipeline/tests/: conftest.py  test_agents_audit.py  test_agents_contracts.py  test_agents_digest_tools.py  test_agents_orchestrator.py  test_agents_resolver.py  test_aqi.py  test_attribution.py  test_content_gate.py  test_deweather.py  test_features.py  test_forecast.py  test_grid.py  test_interventions.py  test_native_deps.py  test_nowcast.py  test_openmeteo.py  test_station_match.py  test_timeutils.py  test_upwind.py  test_ward_bake.py
(+168 files in other folders)
