[project]
name = "vayu"
version = "0.1.0"
description = "VayuDrishti pipeline: ingest -> features -> train -> predict -> publish for urban air-quality intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "pandas>=2.2",
    "pyarrow>=17",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pyogrio>=0.9",
    "requests>=2.32",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
    "earthengine-api>=1.1",
    "lightgbm>=4.7.0",
    "scikit-learn>=1.9.0",
    "numpy>=2.5.1",
    "openai>=2.46.0",
]

[project.scripts]
vayu = "vayu.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "jsonschema>=4.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vayu"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
